apache-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: default
  labels:
    app: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd:2.4
        # volumeMounts:
        # - name: test
        #   mountPath: /var/lib/
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "31Mi"
            cpu: "60m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
      # volumes:
      # - name: test
      #   emptyDir: {}
      #####second container for example#####
      # - name: tomcat
      #   image: tomcat
      #   ports:
      #   - containerPort: 8080
