service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-load-balancer
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
