ambassador-example.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: ambassador
  labels:
    app: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd:2.4
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "31Mi"
            cpu: "60m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: apache-load-balancer
  namespace: ambassador
spec:
  type: ClusterIP
  selector:
    app: apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: httpd-ingress
  namespace: ambassador
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: ambassador
spec:
  rules:
  - host: apache.ratner.ml
    http:
      paths:
        - path: /
          backend:
            serviceName: apache-load-balancer
            servicePort: 80
