ingress-apache.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: httpd-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    external-dns.alpha.kubernetes.io/hostname: apache.ratner.ml
spec:
  rules:
  - host: apache.ratner.ml
    http:
      paths:
        - path: /
          backend:
            serviceName: apache-load-balancer
            servicePort: 80
  tls:
   - hosts:
     - apache.ratner.ml
     secretName: apache-secret
